--- a/config.ini
+++ b/config.ini
@@ -1,25 +1,28 @@
 [MASTER]
-Host = 86.178.25.97
+Host = 127.0.0.1
 Port = 5000
-Bindip = 0.0.0.0
+Bindip = 127.0.0.1
  
 [AUTH]
-Host = 86.178.25.97
+Host = 127.0.0.1
 Port = 1001
-Bindip = 0.0.0.0
+Bindip = 127.0.0.1
 APIPort = 5001
  
 [CHARACTER]
-Host = 86.178.25.97
+Host = 127.0.0.1
 Port = 1002
-Bindip = 0.0.0.0
+Bindip = 127.0.0.1
 APIPort = 5002
 
 [CHAT]
-Host = 86.178.25.97
+Host = 127.0.0.1
 Port = 1003
-Bindip = 0.0.0.0
+Bindip = 127.0.0.1
 APIPort = 5003
 
 [ZONE]
-Bindip = 0.0.0.0
+Bindip = 127.0.0.1
+
+[Config]
+UPNP = True
